düzenleme yapıldı
