# src/routes/productRouter.js
@@ -1,16 +1,7 @@
 "use client"
 
 const router = require("express").Router()
-const { ProductCategory, Product } = require("../controllers/productController")
-
-router.route("/categories")
-    .get(ProductCategory.list)
-    .post(ProductCategory.create)
-router.route("/categories/:categoryId")
-    .get(ProductCategory.read)
-    .put(ProductCategory.update)
-    .patch(ProductCategory.update)
-    .delete(ProductCategory.delete)
+const Product = require("../controllers/productController")
 
 router.route("/")
     .get(Product.list)
